--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+
+    <title>DQ Monsters DB</title>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Dragon Quest Monsters, also known as Dragon Quest Warriors, is a JRPG game based on the monsters from the Dragon Quest franchise. This is a comprehensive database for information about monsters, skills, stats, and items that appear in the game."
     />
     <title>DQ Monsters DB</title>
   </head>
