Shortened meta description length

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>DQ Monsters DB</title>
     <meta
       name="description"
-      content="Dragon Quest Monsters, also known as Dragon Quest Warriors, is a JRPG game based on the monsters from the Dragon Quest franchise. This is a comprehensive database for information about monsters, skills, stats, and items that appear in the game."
+      content="Comprehensive game information database for Dragon Quest Monsters. It features monsters, skills, and items to help you on your journey through various dungeons."
     />
 
     <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico" />
