Fixed links for open graph and twitter

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://dqmonsters-db.vercel.app.com/" />
+    <meta property="og:url" content="https://dqmonsters-db.vercel.app/" />
     <meta property="og:title" content="DQ Monsters DB" />
     <meta
       property="og:description"
@@ -35,13 +35,13 @@
     />
     <meta
       property="og:image"
-      content="%PUBLIC_URL%/android-chrome-192x192.png"
+      content="https://dqmonsters-db.vercel.app/android-chrome-192x192.png"
     />
 
     <meta property="twitter:card" content="summary" />
     <meta
       property="twitter:url"
-      content="https://dqmonsters-db.vercel.app.com/"
+      content="https://dqmonsters-db.vercel.app/"
     />
     <meta property="twitter:title" content="DQ Monsters DB" />
     <meta
@@ -50,7 +50,7 @@
     />
     <meta
       property="twitter:image"
-      content="%PUBLIC_URL%/android-chrome-192x192.png"
+      content="https://dqmonsters-db.vercel.app/android-chrome-192x192.png"
     />
 
     <meta name="theme-color" content="#000000" />
